--- a/idm-17-02/Team_1702-B/index.html
+++ b/idm-17-02/Team_1702-B/index.html
@@ -381,6 +381,8 @@ function slide_door(){
     $('#box1').slideToggle(300);
 }
 </script>
+</form>
+</div>			
 <script>
 $('#check').on('click',function(){
 	if($(this).prop('checked')){	
